# 3DSController

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3DS/: Makefile
3DS/source/: main.c  settings.c
PC/: CMakeLists.txt
PC/include/: general.h  joystick.hpp  keys.hpp  settings.h  wireless.hpp
PC/src/: general.cpp  joystick.cpp  keyboard.cpp  keys.cpp  main.c  main.c.old  settings.cpp  winmain.cpp  wireless.cpp
